fix: added dark mode to code of conduct

--- a/css/coc.css
+++ b/css/coc.css
@@ -1,3 +1,19 @@
+:root {
+  --color-bg: #fff;
+  --color-text: #000;
+  --color-bg-card: #fff;
+  --color-links: #1d1283;
+  --color-events: #e30162;
+}
+
+.dark-theme {
+  --color-bg: #1c1b22;
+  --color-text: #e1e1ec;
+  --color-bg-card: #312f3b;
+  --color-links: #0080ff;
+  --color-events: #ff0090;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +22,7 @@
 
 body {
   font: 16px 'Roboto', sans-serif;
+  background-color: var(--color-bg);
 }
 
 main {
@@ -21,21 +38,24 @@ main article {
 .welcome-title {
   text-align: center;
   font-size: 2rem;
+  color: var(--color-text);
 }
 
 .coc-header {
   text-align: center;
   font-weight: 700;
   padding: 20px;
+  color: var(--color-text);
 }
 
 .coc-list {
   text-align: left;
+  color: var(--color-text);
 }
 
 a {
   text-decoration: none;
-  color: #0000ff;
+  color: var(--color-links);
 }
 
 .coc-list-elements {
@@ -49,6 +69,7 @@ footer {
   width: 100%;
   padding: 15px;
   text-align: center;
+  color: var(--color-text);
 }
 
 @media only screen and (max-width: 600px) {
